fix body overflow

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -31,9 +31,7 @@ main, header {
 
 // General //
 
-body {
-    overflow: hidden;
-}
+
 
 .bold {
     font-family: Montserrat-Bold;
